@@ -33,32 +33,39 @@ public class WorkingDirectory
         return directoryName;
     }
 
-    public void getContents()
+    public OperationStatus getContents()
     {
+        OperationStatus os = new OperationStatus();
+        StringBuilder data = new StringBuilder();
+
         Path curDir = Paths.get(directoryName);
 
         try
         {
             List<Path> entries = Files.list(curDir)
                     .sorted(Comparator.comparing(Path::getFileName))
-                    .collect(Collectors.toList());
+                    .toList();
 
             for (Path entry : entries)
             {
                 Path curPath = entry.getFileName();
-                if (Files.isDirectory(entry)) System.out.println("<DIR>\t" + curPath);
-                else System.out.println("\t\t" + curPath);
+                //if (Files.isDirectory(entry)) System.out.println("<DIR>\t" + curPath);
+                //else System.out.println("\t\t" + curPath);
+                if (Files.isDirectory(entry)) data.append("<DIR>\t" + curPath + "\n");
+                else data.append("\t\t" + curPath + "\n");
             }
 
-//            os.setStatus(Status.OK);
-//            os.setMessage(data.toString());
+            os.setStatus(Status.OK);
+            os.setMessage(data.toString());
         }
         catch (IOException e)
         {
-//            os.setStatus(Status.ERROR);
-//            os.setMessage("Каталога " + curDir.toString() + " не существует");
-            System.err.println("Ошибка: " + e.getMessage());
+            os.setStatus(Status.ERROR);
+            os.setMessage("Каталога " + curDir.toString() + " не существует");
+            //System.err.println("Ошибка: " + e.getMessage());
         }
+
+        return os;
     }
 
     public Path getParent()
@@ -66,14 +73,30 @@ public class WorkingDirectory
         return Paths.get(directoryName).getParent();
     }
 
-    public void cdParent()
+    public OperationStatus cdParent()
     {
+        OperationStatus os = new OperationStatus();
+
         Path parentDir = getParent();
-        if (parentDir != null) directoryName = parentDir.toString();
+        if (parentDir != null)
+        {
+            directoryName = parentDir.toString();
+            os.setStatus(Status.OK);
+            os.setMessage("");
+        }
+        else
+        {
+            os.setStatus(Status.ERROR);
+            os.setMessage("Родительский каталог отсутствует");
+        }
+
+        return os;
     }
 
-    public void cdChild(String childDirName, OperationStatus os)
+    public OperationStatus cdChild(String childDirName)
     {
+        OperationStatus os = new OperationStatus();
+
         Path childDir = Paths.get(directoryName).resolve(childDirName);
         if (childDirExists(childDir))
         {
@@ -86,6 +109,8 @@ public class WorkingDirectory
             os.setStatus(Status.ERROR);
             os.setMessage("Каталога " + childDirName + " не существует");
         }
+
+        return os;
     }
 
     public boolean childDirExists(Path childDir)
@@ -93,52 +118,114 @@ public class WorkingDirectory
         return Files.exists(childDir) && Files.isDirectory(childDir);
     }
 
-    public void makeDir(String dirName)
+    public OperationStatus makeDir(String dirName)
     {
+        OperationStatus os = new OperationStatus();
+
         Path curDir = Paths.get(directoryName);
         Path newDir = curDir.resolve(dirName);
 
         try
         {
             Files.createDirectory(newDir);
+            os.setStatus(Status.OK);
+            os.setMessage(newDir.toString());
         }
         catch (java.nio.file.FileAlreadyExistsException e)
         {
-            System.err.println("Каталог с данным именем уже существует");
+            os.setStatus(Status.ERROR);
+            os.setMessage("Каталог с данным именем уже существует");
         }
         catch (IOException e)
         {
-            System.err.println("Ошибка: " + e.getMessage());
+            os.setStatus(Status.ERROR);
+            os.setMessage("Ошибка: " + e.getMessage());
         }
+
+        return os;
     }
 
-    public void changeDir()
+    public OperationStatus changeDir(String dirName)
     {
+        OperationStatus os = new OperationStatus();
 
+        Path destDir = Paths.get(dirName);
+        if (childDirExists(destDir))
+        {
+            directoryName = destDir.toString();
+            os.setStatus(Status.OK);
+            os.setMessage("");
+        }
+        else
+        {
+            os.setStatus(Status.ERROR);
+            os.setMessage("Каталога " + dirName + " не существует");
+        }
+
+        return os;
     }
 
-    public void deleteAllSubdir()
+    public OperationStatus deleteWithSubdir(String dirName) // полностью переделать
     {
+        OperationStatus os = new OperationStatus();
+
         Path curDir = Paths.get(directoryName);
+        Path toDelDir = curDir.resolve(dirName);
 
-        try
+        if (childDirExists(toDelDir))
         {
-            Files.walk(curDir).filter(path -> !path.equals(curDir) && Files.isDirectory(path)).forEach(path ->
+            File[] contents = toDelDir.toFile().listFiles();
+            if (contents != null)
             {
-                try
+                for (File subdir : contents)
                 {
-                    Files.delete(path);
+                    deleteWithSubdir(subdir.getName());
+                    if(!subdir.delete())
+                    {
+                        os.setStatus(Status.ERROR);
+                        os.setMessage("Ошибка удаления " + subdir.getAbsolutePath());
+                    }
                 }
-                catch (IOException e)
-                {
-                    System.out.println("Ошибка: " + e.getMessage());
-                }
-            });
+            }
+
+            if (!toDelDir.toFile().delete())
+            {
+                os.setStatus(Status.ERROR);
+                os.setMessage("Ошибка удаления " + toDelDir.getFileName());
+            }
+
+//            try
+//            {
+//                Files.walk(toDelDir).filter(path -> !path.equals(toDelDir) && Files.isDirectory(path)).forEach(path ->
+//                {
+//                    try
+//                    {
+//                        Files.delete(path);
+//                    }
+//                    catch (IOException e)
+//                    {
+//                        System.out.println("Ошибка: " + e.getMessage());
+//                    }
+//                });
+//                Files.delete(toDelDir);
+//                toDelDir.
+//
+//                os.setStatus(Status.OK);
+//                os.setMessage("");
+//            }
+//            catch (IOException e)
+//            {
+//                os.setStatus(Status.OK);
+//                os.setMessage("Ошибка: " + e.getMessage());
+//            }
         }
-        catch (IOException e)
+        else
         {
-            System.err.println("Ошибка: " + e.getMessage());
+            os.setStatus(Status.ERROR);
+            os.setMessage("Каталога " + dirName + " не существует");
         }
+
+        return os;
     }
 
     public void getFilesWithExtension(String ext)
@@ -162,14 +249,15 @@ public class WorkingDirectory
         }
     }
 
-    public void getDirTree(String dirName, int level)
+    public OperationStatus getDirTree(String dirName, int level)
     {
+        OperationStatus os = new OperationStatus();
         Path curDir = Paths.get(dirName);
 
         if (Files.exists(curDir) && Files.isDirectory(curDir))
         {
-            String indent = level == 0 ? " " : " ".repeat(level) + "﹂";
-            System.out.println(indent + curDir.getFileName() + "/");
+            String indent = level == 0 ? "" : " ".repeat(level) + "└" + "─".repeat(level);
+            System.out.println(indent + curDir.getFileName());
 
             try
             {
@@ -177,14 +265,18 @@ public class WorkingDirectory
             }
             catch (IOException e)
             {
-                System.err.println("Ошибка при доступе к директории: " + e.getMessage());
+                os.setStatus(Status.ERROR);
+                os.setMessage("Ошибка при выводе дерева каталогов");
             }
         }
+        os.setStatus(Status.OK);
+        os.setMessage("Операция выполнена успешно");
+        return os;
     }
 
-    public void getDirTree(int level)
+    public OperationStatus getDirTree(int level)
     {
-        getDirTree(directoryName, level);
+        return getDirTree(directoryName, level);
     }
 
     public String subDirExists(String curDirName, String subDirName)
